<resources>
    <string name="app_name">Tutorial 13</string>
    <string name="app_name05">Tutorial 05</string>
    <string name="app_name06">Tutorial 06</string>
    <string name="app_name07">Tutorial 07</string>
    <string name="app_name08">Tutorial 08</string>
    <string name="app_name09">Tutorial 09</string>
    <string name="app_name10">Tutorial 10</string>
    <string name="app_name11">DemoVolley</string>
    <string name="splash_wel_msg">Welcome!!</string>

    <!--*************************Login Screen*****************-->
    <string name="title_name">User Login</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="enter_your_password">Enter your Password</string>
    <string name="button_name">Login</string>
    <string name="register">Not a user? Register from here....!!</string>

    <!--****************Welcome Screen****************-->
    <string name="wel_user">Welcome User!!</string>
    <string name="btn_logout">Logout</string>

    <!--*********************Signup Screen*********************-->
    <string name="signup_title">Create your account</string>
    <string name="signUp_firstname">Enter your Firstname</string>
    <string name="signUp_lastname">Enter your Lastname</string>
    <string name="enter_your_number">Enter your 10 digit number</string>
    <string name="reg_field">Branch CE/IT</string>
    <string name="gen_male">Male</string>
    <string name="gen_female">Female</string>
    <string name="TermsAndCond">I agree to the <a href="https://google.com">Terms &amp; Condition</a></string>
    <string name="sign_up_btn">Sign Up</string>
    <string name="update_btn">Update</string>
    <string name="login">Already a user? Login from here....!!</string>
    <string-array name="city">
        <item>Select Your City...</item>
        <item>Ahmedabad</item>
        <item>Surat</item>
        <item>Rajkot</item>
        <item>Jamnagar</item>
        <item>Other</item>
    </string-array>

    <!--*********************User DataView Screen********************-->
    <string name="short_name">SN</string>
    <string name="user_full_name">Short Name</string>
    <string name="user_gender">Gender</string>
    <string name="user_phone">Phone</string>
    <string name="user_email">Email</string>
    <string name="user_city">City</string>
    <string name="user_field">Field</string>
    <string name="comp_website">Website</string>
    <string name="back_link">Back</string>
    <string name="update_link">Edit</string>
    <string name="prev_link">Prev</string>
    <string name="next_link">Next</string>
    <string name="delete_link">Delete</string>

    <string name="anim_duration_medium">1000</string>

    <!--*********************FileHandling Screen*********************-->
    <string name="fileEditTxt">Enter your text here</string>
    <string name="read_files">READ FILES</string>
    <string name="read_assets">READ ASSETS</string>
    <string name="write_files">WRITE FILES</string>
</resources>