<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signupConLayout"
    style="@style/SameWH_Layout"
    tools:context=".SignupActivity">

    <ScrollView
        android:id="@+id/signupScrollView"
        style="@style/SameWH_Layout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/signupScrollCon"
            style="@style/LinearLayoutStyle">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/signupImgView"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:src="@drawable/signup_icon"
                tools:ignore="MissingConstraints">

            </androidx.appcompat.widget.AppCompatImageView>

            <EditText
                android:id="@+id/signupName"
                style="@style/textBoxViewStyle"
                android:autofillHints=""
                android:drawableStart="@drawable/name_icon"
                android:hint="@string/signUp_firstname" />

            <EditText
                android:id="@+id/signupSurname"
                style="@style/textBoxViewStyle"
                android:autofillHints=""
                android:drawableStart="@drawable/name_icon"
                android:hint="@string/signUp_lastname" />

            <EditText
                android:id="@+id/signupEmail"
                style="@style/textBoxViewStyle"
                android:autofillHints=""
                android:drawableStart="@drawable/email_icon"
                android:hint="@string/enter_your_email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/signupPass"
                style="@style/textBoxViewStyle"
                android:autofillHints=""
                android:drawableStart="@drawable/pass_icon"
                android:hint="@string/enter_your_password"
                android:inputType="textPassword" />

            <RadioGroup
                android:id="@+id/genderRadioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <!--android:track="@drawable/switch_track_custom"-->
                <Switch
                    android:id="@+id/signupFieldSwitch"
                    style="@style/SwitchStyle"
                    android:text="@string/reg_field"
                    android:theme="@style/SwitchTheme"
                    tools:ignore="UseSwitchCompatOrMaterialXml" />

                <RadioButton
                    android:id="@+id/MaleRadioButton"
                    style="@style/radioButton"
                    app:autoSizeTextType="none"
                    app:autoSizeMinTextSize="10sp"
                    app:autoSizeMaxTextSize="100sp"
                    app:autoSizeStepGranularity="2sp"
                    android:checked="true"
                    android:text="@string/gen_male" />

                <RadioButton
                    android:id="@+id/FemaleRadioButton"
                    style="@style/radioButton"
                    android:text="@string/gen_female"
                    app:autoSizeMinTextSize="10sp"
                    app:autoSizeMaxTextSize="100sp"
                    app:autoSizeStepGranularity="2sp"
                    app:autoSizeTextType="uniform" />

            </RadioGroup>

            <Spinner
                android:id="@+id/citySpinner"
                style="@style/SpinnerStyle"
                android:layout_marginTop="0dp"
                android:entries="@array/city"
                android:theme="@style/SpinnerTheme" />

            <CheckBox
                android:id="@+id/statusCheckBox"
                style="@style/textViewStyle"
                android:layout_marginTop="10dp"
                android:text="@string/prof_status" />

            <Button
                android:id="@+id/signupbtn"
                style="@style/ButtonStyle"
                android:text="@string/sign_up_btn" />

            <TextView
                android:id="@+id/loginLink"
                style="@style/textViewStyle"
                android:gravity="center"
                android:onClick="loginClick"
                android:text="@string/login" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>