<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginCons"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".LoginActivity">

    <ScrollView
        android:id="@+id/loginscrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/loginLinearLayout"
            style="@style/LayoutStyle"
            android:orientation="vertical"
            android:padding="20dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/aboutUSimageview"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginTop="30dp"
                android:src="@drawable/loginicon"
                tools:ignore="MissingConstraints">

            </androidx.appcompat.widget.AppCompatImageView>

            <TextView
                android:id="@+id/LoginTitle"
                style="@style/TitleStyle"
                android:text="@string/title_name"/>

            <EditText
                android:id="@+id/editTextTextEmailAddress"
                style="@style/textBoxViewStyle"
                android:autofillHints=""
                android:drawableStart="@drawable/email_icon"
                android:hint="@string/enter_your_email"
                android:inputType="textEmailAddress"
                android:text="rjagetiya780@rku.ac.in" />

            <EditText
                android:id="@+id/editTextTextPassword"
                style="@style/textBoxViewStyle"
                android:autofillHints=""
                android:drawableStart="@drawable/pass_icon"
                android:hint="@string/enter_your_password"
                android:inputType="textPassword"
                android:longClickable="false"
                android:text="Rahul@123" />

            <Button
                android:id="@+id/Loginbutton"
                style="@style/ButtonStyle"
                android:text="@string/button_name"/>

            <TextView
                android:id="@+id/signUpLink"
                style="@style/textViewStyle"
                android:gravity="center"
                android:onClick="signupClick"
                android:text="@string/register" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>