<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:padding="16dp"
    tools:context=".FileHandlingActivity">

    <!--*****************"Tutorial 09"**********************-->
    <EditText
        android:id="@+id/editTextDataFile"
        style="@style/textBoxViewStyle"
        android:autofillHints=""
        android:hint="@string/fileEditTxt"
        app:layout_constraintBottom_toTopOf="@+id/readJSON_Filebtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/readJSON_Filebtn"
        style="@style/ButtonStyle"
        android:onClick="readAssets"
        android:text="@string/read_assets"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDataFile" />

    <Button
        android:id="@+id/writeFilebtn"
        style="@style/ButtonStyle"
        android:onClick="writeFiles"
        android:text="@string/write_files"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/readJSON_Filebtn" />

    <Button
        android:id="@+id/readFilebtn"
        style="@style/ButtonStyle"
        android:onClick="readFiles"
        android:text="@string/read_files"
        app:layout_constraintBottom_toTopOf="@+id/fileViewScroll"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/writeFilebtn" />

    <ScrollView
        android:id="@+id/fileViewScroll"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/readFilebtn">

        <LinearLayout
            android:id="@+id/fileViewLayout"
            style="@style/LayoutStyle"
            android:orientation="vertical">

            <TextView
                android:id="@+id/filesView"
                style="@style/textViewStyle" />
        </LinearLayout>
    </ScrollView>
    <!--*****************"Tutorial 09"***********************-->

</androidx.constraintlayout.widget.ConstraintLayout>
